first section on empirical puzzle done

--- a/writeup/proposal.tex
+++ b/writeup/proposal.tex
@@ -59,7 +59,7 @@
 
 \section{Puzzle: FDI does not lead to development}
 
-One of the most universally recommended development strategy in the past three decades is the attraction of foreign direct investment (FDI). The policy is pushed by major international organizations.\footnote{http://www.imf.org/external/pubs/ft/fandd/1999/03/mallampa.htm, http://www.weforum.org/reports/foreign-direct-investment-key-driver-trade-growth-and-prosperity-case-multilateral-agreement} Within political science, much of the literature assumes that countries seek FDI because of its many benefits. The challenge is \textit{how} can countries attract FDI, not whether it wants to attract it \citep{Jensen2003, Li2003, Li2006, Ahlquist2006}. On surface, this belief seems supported by the fact that the amount of FDI has increased greatly in the past decades (\Cref{fig:globalfdi}). The FDI flow to developing countries has not only steadily increased but is also remarkably robust to global economic downturns.
+In recent decades, foreign direct investment (FDI) global flow has steadily increased, rising to over \$1.5 trillion dollars in 2014. For developing countries, FDI flow is also remarkably robust to global downturn (\Cref{fig:globalfdi}). Moreover, FDI is important not only because of its volume, but also because it has been enthusiastically advocated by major international organizations as a key factor to economic development.\footnote{http://www.imf.org/external/pubs/ft/fandd/1999/03/mallampa.htm, http://www.weforum.org/reports/foreign-direct-investment-key-driver-trade-growth-and-prosperity-case-multilateral-agreement} This assumption is also shared widely within political science, where much of the literature starts with the assumption that countries want to seek FDI for its many benefits. The question that these works focus on is \textit{how} countries can attract FDI, not \textit{whether} they want to do so \citep{Jensen2003, Li2003, Li2006, Ahlquist2006}.\footnote{Two recent exceptions are \citet{Pinto2013, Pandya2013}, which are the first to investigate the demand for FDI.} 
 
 \begin{figure}[!ht]
 \includegraphics[width=\textwidth, height=\textheight,keepaspectratio]{../figure/global_fdi}
@@ -67,19 +67,9 @@ One of the most universally recommended development strategy in the past three d
 \label{fig:globalfdi}
 \end{figure}
 
-The reason for this push is that FDI is hypothesized to bring various benefits to developing countries. FDI provides a source of capital which may generate employment (conditional on the fact that foreign firms may not put domestic firms to bankcruptcy, resulting in a net loss of employment). However, the most important promise of FDI is the spillover effect (in technology, human capital, and managerial practice) between the foreign firms and the domestic firms (this is assuming that the foreign firms are more advanced. This may not be true if foreign firms invest outside to seek cheap labor or to circumvent trade restriction). In endogenous growth theory, FDI is a major channel for technological innovation \citep{Findlay1978}.
+Underlying this mode of thinking is the assumption that FDI various benefits to developing countries, such as capital and employment. However, the most important promise that FDI holds to growth is the spillover of productivity between the foreign firms and the domestic firms. This can happen if local firms hire workers that were trained in a foreign firms, improve productivity through backward and forward linkage with foreign firms, or imitate foreign technology. According to growth theory, it is FDI's spillover, not capital or employment, that serves as a major channel for the technological innovation that is a requisite for economic growth \citep{Findlay1978}. In this view, spillover from FDI is also public good, providing benefits to the local firms in ways that the foreign firms do not take into account in their private calculations. This provides the justification for countries' giving investment incentives to FDI firms in order to rectify the undersupply of FDI, closing the gap between private and social returns. 
 
-Spillover can happened in different ways: competition (unless the incoming firm is granted monopoly status) similar to how arm's length trade put pressure on domestic firms to reduce inefficiency \citep{Glass2002}, imitation (both reverse engineering and copying managerial techniques, reverse engineering deserve government support) \citep{Wang1992}, human capital spillover of workers in foreign firms moving to domestic firms (Czech firms) \citep{Djankov2000}, technology transfer. Export demonstration, because exports often involve high fixed cost to set up a distribution and transport infrastructure, learn about foreign taste and regulatory framework. Domestic firms can learn from foreign firms about how to export, and exporting firms are more productive \citep{Aitken1997}.
-
-However, there is no conclusive evidence of a consistent positive effect of FDI on growth and poverty reduction \citep{Guerra2009} (\Cref{fig:fdipoverty}).
-
-Also, governments, both developed and developing have been provided massive incentives to FDI \citep{Telford2001}. For example, Ireland provided foreign investors with lower tax rate, lower land price, and cash grant for R\&D that do not need to be repaid. China also used a tax holiday (two years of no tax and three year of half the normal tax rate) in their special economic zones to attract more foreign firms. We see the same use of FDI incentives in Southeast Asia \citep{Fletcher2002}. The race to offer incentives to attract FDI rages on even among sub-national units. Defying central government's directive, Vietnam's provincial government offered extra-legal incentives to FDI \citep{Vu2007}
-
-Investment incentives also does not work in promoting this link, because technology transfer is conditional \citep{Blomstrom2002}
-
-TRIMS (trade related-investment measure) are not effective because it may lead to firms only bringing in bad technology due to local content requirement. So far there is little evidence, partly because the policy is hard to measure \citep{Greenaway1992}. The agreement on TRIMS also make this policy obsolete for trade-related investment (i.e. exporting firms).
-
-
+And yet, there is no conclusive evidence of FDI having a positive effect on growth \citep{Nair-Reichert2001, Carkovic2002} or poverty reduction \citep{Guerra2009} (\Cref{fig:fdipoverty}). A substantial literature has developed to explain this puzzle, concluding that the growth-enhancing and spillover effect of FDI is conditional on absorptive capacity of local firms. Crossnationally, scholars find that positive growth effect of FDI is more likely when the technological gap between the local and foreign firms are small \citep{Nunnenkamp2004}, and when host countries have strong financial and institutional development \citep{ Durham2004}. Similarly, absorptive capacity, measured by the level of schooling in host economy, conditions the transfer of technology between foreign and local firms across regions in China \citep{Fu2008} and countries in Latin America \citep{Willem2004}.
 
 \begin{figure}[!ht]
 \includegraphics[width=\textwidth, height=\textheight,keepaspectratio]{../figure/fdi_poverty}
@@ -87,10 +77,27 @@ TRIMS (trade related-investment measure) are not effective because it may lead t
 \label{fig:fdipoverty}
 \end{figure}
 
+Despite this resounding conclusion that the effect of FDI is highly conditional and that investment incentives do not work, why do countries still fixate so much on bringing in FDI instead of developing the local absorptive capacity \citep{Blomstrom2002}? For example, Ireland provided foreign investors with lower tax rate, lower land price, and cash grants for R\&D that do not need to be repaid. China also used a tax holiday (two years of no tax and three year of half the normal tax rate) in their special economic zones to attract more foreign firms \citep{Telford2001}. We see the same widespread use of investment incentives in Southeast Asia \citep{Fletcher2002}. In Vietnam, the race to offer incentives to foreign firms rages on even among sub-national units, where provincial governments defied the central government's directive and offered extra-legal incentives to FDI firms \citep{Vu2007}. Not only do these measures not work, they also deprive countries of revenues that could be spent on improving the local labor quality and investment climate, which are much more conducive to spillover effect and growth.
 
-\section{Puzzle 2: If absorptive capacity is important, why don't we see it more?}
+My dissertation project focuses on this empirical puzzle: if the positive effect of FDI is uncertain, why is there so much focus on attracting it even at the expense of generating revenues?\footnote{Countries lose revenue not only through offering financial incentives but also because FDI firms can easily dodge corporate income tax with transfer pricing \citep{Bartelsman2003}.} If developing absorptive capacity is so crucial to making FDI growth-enhancing, why is it often neglected? To understand this puzzle, I propose that we need to take incorporate the calculus of the individual bureaucrat and government officials, who may be more interested in the potential rents from foreign firms than the spillover and growth-enhancing effect of FDI. This is a potential reason why we often see countries (i.e. government officials) being so enthusiastic about attracting FDI, yet not so passionate about developing the local capacity that enables FDI to actually have a positive effect on growth. Both the empirical puzzle and the hypothesis have not been considered by scholars in political economy.
 
-Many works have been done on the importance of absorptive capacity. FDI is only growth enhancing when countries have cap -- a review \citep{Gorg2004}. Variation sub-nationally, China \citep{Fu2008}, crossnationally (absorptive capacity means financial and institutional--property rights--development)\citep{Durham2004}, Latin America (absorptive = educated workers) \citep{Willem2004}.
+\begin{figure}[!ht]
+\includegraphics[width=\textwidth, height=\textheight,keepaspectratio]{../figure/fdi_domestic_treatment}
+\caption{The treatment of FDI and domestic firms}
+\label{fig:fdi_domestic_treatment}
+\end{figure}
+
+This study looks at the interesting phenomenon of FDI engaging in corruption, something that the literature is un-equipped to deal with (except Malesky). It also looks at the issue of private sector development politically, having important welfare and social impact here.
+
+
+\section{Theory}
+
+Government policy is important in inducing spillover.
+
+Spillover can happened in different ways: competition (unless the incoming firm is granted monopoly status) similar to how arm's length trade put pressure on domestic firms to reduce inefficiency \citep{Glass2002}, imitation (both reverse engineering and copying managerial techniques, reverse engineering deserve government support) \citep{Wang1992}, human capital spillover of workers in foreign firms moving to domestic firms (Czech firms) \citep{Djankov2000}, technology transfer. Export demonstration, because exports often involve high fixed cost to set up a distribution and transport infrastructure, learn about foreign taste and regulatory framework. Domestic firms can learn from foreign firms about how to export, and exporting firms are more productive \citep{Aitken1997}.
+
+Corruption: \citep{Malesky2015} is about foreign firms bribe to get into high profitability and protected sectors. Mine is about the calculus of the officials and its effect on the private domestic sector
+
 
 \section{Hypothesis: Rent seeking}
 
