working on theory

--- a/writeup/proposal.tex
+++ b/writeup/proposal.tex
@@ -89,28 +89,58 @@ My dissertation project focuses on this empirical puzzle: if the positive effect
 
 This study looks at the interesting phenomenon of FDI engaging in corruption, something that the literature is un-equipped to deal with (except Malesky). It also looks at the issue of private sector development politically, having important welfare and social impact here.
 
+It also contributes a fresh look into the treatment of FDI vs domestic firms. Most of what we have seen consider FDI as the underdog, unfamiliar with the location, susceptible to expropriation. This presumes a political environment in which bureaucrats and governments official are accountable to the interest of domestic firms. However, we forget that when FDI is big and resourceful, they can transform the relationship with corrupt officials into ``mutual hostages''. It is possible to see FDI being treated better than domestic firms.
 
 \section{Theory}
 
-Government policy is important in inducing spillover.
+In this section, I discuss the different steps in my causal chains, and specify the testable hypotheses along the way.
 
-Spillover can happened in different ways: competition (unless the incoming firm is granted monopoly status) similar to how arm's length trade put pressure on domestic firms to reduce inefficiency \citep{Glass2002}, imitation (both reverse engineering and copying managerial techniques, reverse engineering deserve government support) \citep{Wang1992}, human capital spillover of workers in foreign firms moving to domestic firms (Czech firms) \citep{Djankov2000}, technology transfer. Export demonstration, because exports often involve high fixed cost to set up a distribution and transport infrastructure, learn about foreign taste and regulatory framework. Domestic firms can learn from foreign firms about how to export, and exporting firms are more productive \citep{Aitken1997}.
+There are several channels through which spillover can happen, all of which require a strong domestic sector.
+\begin{itemize}
+	\item imitation:  domestic firms may reverse engineer a production or management technique \citep{Wang1992}. This requires 1) a small, surmountable technological gap \citep{Kokko1996}, and 2) backward between local and foreign firms \citep{Javorcik2004}. Therefore, technologically competent local firms that are able to supply inputs to foreign firms is necessary.
+	\item skills acquisition: workers trained in foreign firms bring along their human capital when they move to domestic firms \citep{Djankov2000}. This presumes a healthy domestic sector that can offer competitive wages to workers. 
+	\item competition: similar to arm's length trade, the presence of foreign firms put pressure on domestic firms to reduce inefficiency \citep{Glass2002}. For this mechanism to work, the government needs to set up a regulatory environment that treats all firms equally.
+	\item export demonstration: foreign firms are more knowledgeable about exporting, which involves high fixed cost to set up a distribution and transport infrastructure, or learning about foreign taste and regulatory environment. Domestic firms can learn this ``export know-how'' from foreign firms \citep{Aitken1997}. This process, too, requires a strong domestic sectors that are able to engage in commercial linkages with foreign firms.
+\end{itemize} 
 
-Corruption: \citep{Malesky2015} is about foreign firms bribe to get into high profitability and protected sectors. Mine is about the calculus of the officials and its effect on the private domestic sector
+Therefore, if a government is truly interested in FDI for its spillover and growth-enhancing effect, it must be equally interested, if not more, in developing a strong domestic sectors via equal treatment of firms, investment in labor force. All else equal, if we find that domestic firms report worse treatment, worse labor quality, or export less, this can be evidence that the government is not primarily interested in the spillover effect of FDI.\footnote{Discuss the selection bias of foreign firms in domestic markets, which depresses the difference in \textbf{reported} treatment between foreign firms and domestic firms.}
+
+\subsection{FDI and corruption}
+
+Our hypothesis that bureaucrats and government officials engage in corruption with foreign firms to the detriment of domestic firm is a novel contribution to the IPE literature of FDI and corruption. So far, the literature has been predominantly dominated by studies showing that a high level of corruption deters FDI \citep{Wei2000, Hakkala2008, Al-Sadig2009}. But what about the firms that choose to invest in a highly corrupt environment nonetheless? One strain of the literature argues that foreign firms can help reduce corruption in host country via regulatory pressure effect, demonstration effect, professionalization effect \citep{Kwok2006}; or via competing away the rents of the domestic firms, reducing the supply of bribes \citep{Sandholtz2003}. On the other hand, another view is that foreign firms, disadvantaged by their foreignness, have to bribe more and contribute to corruption \citep{Hellman2002}.
+
+Our theory advances the literature by thinking about micrologic of different types of foreign firms. Not all foreign firms are underdog, forced to bribe to equalize the play field. If foreign firms enjoy regulatory privilege, they do not want to put it away. If foreign firms are in collusion with government, there is by definition no demonstration effect or professionalization effect. Indeed, as South-South FDI has increased greatly in recently years, if foreign firms come from equally corrupt home countries, they may be no less well-versed than local firms in the dark arts.
+
+However, our theory also improves upon the simple hypothesis that ``FDI firms bribe too.'' It is not the case that foreign firms are necessarily underdog, but 
+they can also bribe to get an upper hand in the local market,\footnote{http://www.nytimes.com/2012/04/22/business/at-wal-mart-in-mexico-a-bribe-inquiry-silenced.html?pagewanted=all} or to pursue rent in protected industries \citep{Malesky2015}. This is especially true of the foreign firm is big, in high-rent sectors, or from home countries with institutions similar to that of the host countries. Going beyond the participation of foreign firms in the corrupt activities, we tie this explanation back to the empirical puzzle of a stunted domestic sector.
+
+\begin{quote}
+Hypothesis: FDI in corruption countries stunt the development of the domestic private sectors
+\end{quote}
+
+\begin{quote}
+Hypothesis: FDI in corrupt sectors stunt the development of the domestic private sectors
+\end{quote}
+
+\subsection{Bureaucrats and corruption}
 
 
-\section{Hypothesis: Rent seeking}
 
-- corruption literature
-- local central literature
+- local central literature (China)
 
 Political decentralization increases bribery \citep{Fan2009}. Uncoordinated corruption, more tiers of governments, increase corruption.
 
 Fiscal decentralization reduces corruption \citep{Guerra2009}
 
+\begin{quote}
+Hypothesis: FDI in provinces where provincial leaders are more interested in rent than promotion will stunt the development of the domestic private sector
+\end{quote}
+
+\section{Hypothesis: Rent seeking}
+
 \section{Research design}
 
-Hypothesis: In sectors / countries where there is a lot of corruption between the politicians and FDI, there will be less private sector development.
+Hypothesis: In sectors / countries where there is a lot of corruption between the politicians and FDI, there will be less private sector development (i.e. more time dealt with government, worse access to land, etc.) However, this could just be a measure of corruption overall! Then we look at the gap between FDI and domestic firms -- then we know that the outcome does not just reflect the overall quality of that sector.
 
 - corruption between the politicians and FDI: 
 
@@ -137,6 +167,8 @@ INSERT GRAPH HERE
 \citep{Malesky2008} Straight ahead on red -- central incentive is growth
 
 \citep{Sheng2007} China's central government exert more control over provinces that has high FDI (through party organization channel)
+
+Proxy provincial leader's need to promotion with age?
 
 \subsection{Sectoral}
 
@@ -165,6 +197,10 @@ Evidence is mixed across regions / countries DOES FOREIGN DIRECT INVESTMENT PROM
 in Latin America, high corruption = high FDI http://www.ccsenet.org/journal/index.php/jms/article/viewFile/32108/18686
 
 http://www.nytimes.com/2012/04/22/business/at-wal-mart-in-mexico-a-bribe-inquiry-silenced.html?pagewanted=all (Walmart bribe in Mexico)
+
+\subsection{Alternative hypothesis}
+
+Fertility rate to control for the job hypothesis
 
 \clearpage
 \bibliographystyle{chicago}
