--- a/writeup/proposal.tex
+++ b/writeup/proposal.tex
@@ -59,7 +59,7 @@
 
 \section{Puzzle: FDI does not lead to development}
 
-In recent decades, foreign direct investment (FDI) global flow has steadily increased, rising to over \$1.5 trillion dollars in 2014. For developing countries, FDI flow is also remarkably robust to global downturn (\Cref{fig:globalfdi}). Moreover, FDI is important not only because of its volume, but also because it has been enthusiastically advocated by major international organizations as a key factor to economic development.\footnote{http://www.imf.org/external/pubs/ft/fandd/1999/03/mallampa.htm, http://www.weforum.org/reports/foreign-direct-investment-key-driver-trade-growth-and-prosperity-case-multilateral-agreement} This assumption is also shared widely within political science, where much of the literature starts with the assumption that countries want to seek FDI for its many benefits. The question that these works focus on is \textit{how} countries can attract FDI, not \textit{whether} they want to do so \citep{Jensen2003, Li2003, Li2006, Ahlquist2006}.\footnote{Two recent exceptions are \citet{Pinto2013, Pandya2013}, which are the first to investigate the demand for FDI.} 
+In recent decades, foreign direct investment (FDI) global flow has steadily increased, rising to over \$1.5 trillion dollars in 2014. For developing countries, FDI flow is also remarkably robust to global downturn, leading to enthusiastic endorsement by major international organizations as a key factor to economic development (\Cref{fig:globalfdi}).\footnote{http://www.imf.org/external/pubs/ft/fandd/1999/03/mallampa.htm, http://www.weforum.org/reports/foreign-direct-investment-key-driver-trade-growth-and-prosperity-case-multilateral-agreement} This assumption is also shared widely within political science, where much of the literature starts with the assumption that countries want to seek FDI for its many benefits. The question that these works focus on is \textit{how} countries can attract FDI, not \textit{whether} they want to do so \citep{Jensen2003, Li2003, Li2006, Ahlquist2006}.\footnote{Two recent exceptions are \citet{Pinto2013, Pandya2013}, which are the first to investigate the demand for FDI.} 
 
 \begin{figure}[!ht]
 \includegraphics[width=\textwidth, height=\textheight,keepaspectratio]{../figure/global_fdi}
@@ -67,9 +67,9 @@ In recent decades, foreign direct investment (FDI) global flow has steadily incr
 \label{fig:globalfdi}
 \end{figure}
 
-Underlying this mode of thinking is the assumption that FDI various benefits to developing countries, such as capital and employment. However, the most important promise that FDI holds to growth is the spillover of productivity between the foreign firms and the domestic firms. This can happen if local firms hire workers that were trained in a foreign firms, improve productivity through backward and forward linkage with foreign firms, or imitate foreign technology. According to growth theory, it is FDI's spillover, not capital or employment, that serves as a major channel for the technological innovation that is a requisite for economic growth \citep{Findlay1978}. In this view, spillover from FDI is also public good, providing benefits to the local firms in ways that the foreign firms do not take into account in their private calculations. This provides the justification for countries' giving investment incentives to FDI firms in order to rectify the undersupply of FDI, closing the gap between private and social returns. 
+Underlying this mode of thinking is the assumption that FDI brings various benefits to developing countries, including capital and employment. However, the most important promise that FDI holds to growth is the spillover of productivity between the foreign firms and the domestic firms. This can happen if local firms hire workers that were trained in a foreign firms, improve productivity through backward and forward linkages, or imitate foreign technology. According to growth theory, it is FDI's spillover, not capital or employment, that brings the technological innovation that is a requisite for economic growth \citep{Findlay1978}. In this view, FDI is also a public good, providing spillover benefits to the local firms in ways that foreign firms do not take into account in their private calculations. This provides the justification for countries' using investment incentives to rectify the undersupply of FDI, closing the gap between private and social returns. 
 
-And yet, there is no conclusive evidence of FDI having a positive effect on growth \citep{Nair-Reichert2001, Carkovic2002} or poverty reduction \citep{Guerra2009} (\Cref{fig:fdipoverty}). A substantial literature has developed to explain this puzzle, concluding that the growth-enhancing and spillover effect of FDI is conditional on absorptive capacity of local firms. Crossnationally, scholars find that positive growth effect of FDI is more likely when the technological gap between the local and foreign firms are small \citep{Nunnenkamp2004}, and when host countries have strong financial and institutional development \citep{ Durham2004}. Similarly, absorptive capacity, measured by the level of schooling in host economy, conditions the transfer of technology between foreign and local firms across regions in China \citep{Fu2008} and countries in Latin America \citep{Willem2004}.
+Despite this prevailing view, there is little conclusive evidence of FDI having a positive effect on growth \citep{Nair-Reichert2001, Carkovic2002} or poverty reduction \citep{Guerra2009} (\Cref{fig:fdipoverty}). A substantial literature has developed to explain this puzzle, concluding that the growth-enhancing and spillover effect of FDI is conditional on the absorptive capacity of local firms. Cross-nationally, scholars find that FDI is more likely to have a positive growth effect when the technological gap between the local and foreign firms are small \citep{Nunnenkamp2004} and when host countries have strong financial and institutional development \citep{ Durham2004}. Similarly, absorptive capacity, measured by the level of schooling in host economy, conditions the transfer of technology between foreign and local firms across regions in China \citep{Fu2008} and countries in Latin America \citep{Willem2004}.
 
 \begin{figure}[!ht]
 \includegraphics[width=\textwidth, height=\textheight,keepaspectratio]{../figure/fdi_poverty}
@@ -77,9 +77,9 @@ And yet, there is no conclusive evidence of FDI having a positive effect on grow
 \label{fig:fdipoverty}
 \end{figure}
 
-Despite this resounding conclusion that the effect of FDI is highly conditional and that investment incentives do not work, why do countries still fixate so much on bringing in FDI instead of developing the local absorptive capacity \citep{Blomstrom2002}? For example, Ireland provided foreign investors with lower tax rate, lower land price, and cash grants for R\&D that do not need to be repaid. China also used a tax holiday (two years of no tax and three year of half the normal tax rate) in their special economic zones to attract more foreign firms \citep{Telford2001}. We see the same widespread use of investment incentives in Southeast Asia \citep{Fletcher2002}. In Vietnam, the race to offer incentives to foreign firms rages on even among sub-national units, where provincial governments defied the central government's directive and offered extra-legal incentives to FDI firms \citep{Vu2007}. Not only do these measures not work, they also deprive countries of revenues that could be spent on improving the local labor quality and investment climate, which are much more conducive to spillover effect and growth.
+Despite the resounding conclusion that the effect of FDI is highly conditional and that investment incentives do not work, why do countries still fixate so much on bringing in FDI instead of developing the local absorptive capacity \citep{Blomstrom2002}? For example, Ireland provided foreign investors with lower tax rate, lower land price, and cash grants for R\&D that do not need to be repaid. China also used a tax holiday (two years of no tax and three year of half the normal tax rate) in special economic zones to attract more foreign firms \citep{Telford2001}. We see the same widespread use of investment incentives in Southeast Asia \citep{Fletcher2002}. In Vietnam, the race to offer incentives to foreign firms rages on even among sub-national units, as provincial governments defied the central government's directive and offered extra-legal incentives to FDI firms \citep{Vu2007}. Not only do these measures not work, they also deprive countries of revenues that could be spent on improving the local labor quality and investment climate, which are much more conducive to spillover effect and growth.
 
-My dissertation project focuses on this empirical puzzle: if the positive effect of FDI is uncertain, why is there so much focus on attracting it even at the expense of generating revenues?\footnote{Countries lose revenue not only through offering financial incentives but also because FDI firms can easily dodge corporate income tax with transfer pricing \citep{Bartelsman2003}.} If developing absorptive capacity is so crucial to making FDI growth-enhancing, why is it often neglected? To understand this puzzle, I propose that we need to take incorporate the calculus of the individual bureaucrat and government officials, who may be more interested in the potential rents from foreign firms than the spillover and growth-enhancing effect of FDI. This is a potential reason why we often see countries (i.e. government officials) being so enthusiastic about attracting FDI, yet not so passionate about developing the local capacity that enables FDI to actually have a positive effect on growth. Both the empirical puzzle and the hypothesis have not been considered by scholars in political economy.
+Thus, my dissertation project focuses on this empirical puzzle: if the positive effect of FDI is uncertain, why is there so much focus on attracting it? If developing absorptive capacity is so crucial to making FDI growth-enhancing, why is it often neglected? To understand this puzzle, I propose that we need to take into account the calculus of the individual bureaucrats and government officials, who may be more interested in the potential rents from foreign firms than the spillover and growth-enhancing effect of FDI. This is a potential reason why we often see countries (i.e. government officials) being so enthusiastic about attracting FDI, yet not so passionate about developing the local capacity that enables FDI to actually have a positive effect on growth.
 
 \begin{figure}[!ht]
 \includegraphics[width=\textwidth, height=\textheight,keepaspectratio]{../figure/fdi_domestic_treatment}
@@ -87,120 +87,125 @@ My dissertation project focuses on this empirical puzzle: if the positive effect
 \label{fig:fdi_domestic_treatment}
 \end{figure}
 
-This study looks at the interesting phenomenon of FDI engaging in corruption, something that the literature is un-equipped to deal with (except Malesky). It also looks at the issue of private sector development politically, having important welfare and social impact here.
+Starting with this empirical puzzle, my project aims to shed light on various related issues. First, it investigates the collusion of FDI firms and host countries' officials, a understudied phenomenon as the existing literature often assumes a foreign firm trying to fend off extortion and harassment from host countries. Second, it examines the political drivers behind private sector development, an issue whose welfare impact is well-known yet whose political determinants are ill-understood. Third, my project looks at the treatment of foreign firms versus domestic firms from a fresh angle. The majority of political science literature has considered FDI as the underdog, unfamiliar with the location, susceptible to expropriation, threatened by lobbying effort of domestic firms. However, when FDI firms are big and resourceful, they can be an equal partner in the collusive relationship with corrupt officials to the detriment of the domestic firms.
 
-It also contributes a fresh look into the treatment of FDI vs domestic firms. Most of what we have seen consider FDI as the underdog, unfamiliar with the location, susceptible to expropriation. This presumes a political environment in which bureaucrats and governments official are accountable to the interest of domestic firms. However, we forget that when FDI is big and resourceful, they can transform the relationship with corrupt officials into ``mutual hostages''. It is possible to see FDI being treated better than domestic firms.
+\section{Tentative evidence}
+
+In this section, I present some evidences that motivate the puzzle.
+
+\begin{itemize}
+	\item The spillover effect of FDI on growth is highly variable. For example, FDI is found to be growth-enhancing in East Asia, but not in Latin America \citep{Zhang2001}. Similarly, the effect of FDI on domestic investment also varies across countries and regions. FDI is found to crowd in investment in some countries (e.g. Ghana, Senegal, South Korea, Pakistan, Thailand, etc.) but crowd out in others \citep{Agosin2005}.
+	
+	\item Despite the prevalent concern with discrimination against foreign firms, the Wold Bank Enterprise Survey finds that foreign firms actually face fewer obstacles while doing business \citep{Batra2003}. The gap in the treatment of foreign and domestic firms also varies across countries (\Cref{fig:fdi_domestic_treatment}).
+	
+	\item The correlation between corruption and FDI is negative. However, there is a lot of unexplained variance at the high end of FDI. Countries with low level of FDI are always very corrupt, but countries with high level of FDI can be as well (\Cref{fig:fdi_corruption}).
+	
+	\begin{figure}[!ht]
+	\includegraphics[width=\textwidth, height=\textheight,keepaspectratio]{../figure/fdi_corruption}
+	\caption{Source: \citep{Malesky2005}}
+	\label{fig:fdi_corruption}
+	\end{figure}
+\end{itemize}
+
+
 
 \section{Theory}
 
 In this section, I discuss the different steps in my causal chains, and specify the testable hypotheses along the way.
 
+\subsection{The spillover effect of FDI depends on government's policy to develop the domestic sector}
+
 There are several channels through which spillover can happen, all of which require a strong domestic sector.
 \begin{itemize}
 	\item imitation:  domestic firms may reverse engineer a production or management technique \citep{Wang1992}. This requires 1) a small, surmountable technological gap \citep{Kokko1996}, and 2) backward between local and foreign firms \citep{Javorcik2004}. Therefore, technologically competent local firms that are able to supply inputs to foreign firms is necessary.
 	\item skills acquisition: workers trained in foreign firms bring along their human capital when they move to domestic firms \citep{Djankov2000}. This presumes a healthy domestic sector that can offer competitive wages to workers. 
-	\item competition: similar to arm's length trade, the presence of foreign firms put pressure on domestic firms to reduce inefficiency \citep{Glass2002}. For this mechanism to work, the government needs to set up a regulatory environment that treats all firms equally.
-	\item export demonstration: foreign firms are more knowledgeable about exporting, which involves high fixed cost to set up a distribution and transport infrastructure, or learning about foreign taste and regulatory environment. Domestic firms can learn this ``export know-how'' from foreign firms \citep{Aitken1997}. This process, too, requires a strong domestic sectors that are able to engage in commercial linkages with foreign firms.
-\end{itemize} 
+	\item competition: similar to arm's length trade, the presence of foreign firms put pressure on domestic firms to reduce inefficiency \citep{Glass2002}. For this mechanism to work, the domestic sector must survive instead of being squeezed out of market by foreign firms.
+	\item export demonstration: foreign firms are more knowledgeable about exporting, which involves high fixed cost to set up a distribution and transport infrastructure, or learning about foreign taste and regulatory environment. Domestic firms can learn this ``export know-how'' from foreign firms \citep{Aitken1997}. This process, too, requires a strong domestic sector that is able to engage in commercial linkages with foreign firms.
+\end{itemize}
 
-Therefore, if a government is truly interested in FDI for its spillover and growth-enhancing effect, it must be equally interested, if not more, in developing a strong domestic sectors via equal treatment of firms, investment in labor force. All else equal, if we find that domestic firms report worse treatment, worse labor quality, or export less, this can be evidence that the government is not primarily interested in the spillover effect of FDI.\footnote{Discuss the selection bias of foreign firms in domestic markets, which depresses the difference in \textbf{reported} treatment between foreign firms and domestic firms.}
+Therefore, since the spillover effect of FDI depends on a strong domestic sector, if a government is truly interested in FDI for its spillover and growth-enhancing effect, the government must be equally interested, if not more, in nurturing the absorptive capacity of domestic firms. Holding constant firm characteristics (size, sector, etc.), if we find that domestic firms receive worse treatment by the government, suffer from worse labor quality, or export less, this can be evidence that the government is not primarily interested in the spillover effect of FDI.
 
 \subsection{FDI and corruption}
 
-Our hypothesis that bureaucrats and government officials engage in corruption with foreign firms to the detriment of domestic firm is a novel contribution to the IPE literature of FDI and corruption. So far, the literature has been predominantly dominated by studies showing that a high level of corruption deters FDI \citep{Wei2000, Hakkala2008, Al-Sadig2009}. But what about the firms that choose to invest in a highly corrupt environment nonetheless? One strain of the literature argues that foreign firms can help reduce corruption in host country via regulatory pressure effect, demonstration effect, professionalization effect \citep{Kwok2006}; or via competing away the rents of the domestic firms, reducing the supply of bribes \citep{Sandholtz2003}. On the other hand, another view is that foreign firms, disadvantaged by their foreignness, have to bribe more and contribute to corruption \citep{Hellman2002}.
+Our hypothesis that host country officials engage in corruption with foreign firms to the detriment of domestic firm is a novel contribution to the IPE literature of FDI and corruption. So far, the literature has been predominantly dominated by studies showing that a high level of corruption deters FDI \citep{Wei2000, Hakkala2008, Al-Sadig2009}. But what about firms that choose to invest in a highly corrupt environment nonetheless? One strain of the literature argues that foreign firms can help reduce corruption in host country via regulatory pressure effect, demonstration effect, professionalization effect \citep{Kwok2006}; or via competing away the rents of the domestic firms, reducing the supply of bribes \citep{Sandholtz2003}. On the other hand, some argue that foreign firms, disadvantaged by their foreignness, have to bribe more and exacerbate corruption \citep{Hellman2002}.
 
-Our theory advances the literature by thinking about micrologic of different types of foreign firms. Not all foreign firms are underdog, forced to bribe to equalize the play field. If foreign firms enjoy regulatory privilege, they do not want to put it away. If foreign firms are in collusion with government, there is by definition no demonstration effect or professionalization effect. Indeed, as South-South FDI has increased greatly in recently years, if foreign firms come from equally corrupt home countries, they may be no less well-versed than local firms in the dark arts.
-
-However, our theory also improves upon the simple hypothesis that ``FDI firms bribe too.'' It is not the case that foreign firms are necessarily underdog, but 
-they can also bribe to get an upper hand in the local market,\footnote{http://www.nytimes.com/2012/04/22/business/at-wal-mart-in-mexico-a-bribe-inquiry-silenced.html?pagewanted=all} or to pursue rent in protected industries \citep{Malesky2015}. This is especially true of the foreign firm is big, in high-rent sectors, or from home countries with institutions similar to that of the host countries. Going beyond the participation of foreign firms in the corrupt activities, we tie this explanation back to the empirical puzzle of a stunted domestic sector.
+My theory advances the literature by thinking about the behaviors of different types of foreign firms. Not all foreign firms are underdog, forced to bribe to equalize the playing field. If foreign firms enjoy regulatory privilege, they do not want to relinquish it. If foreign firms are in collusion with government, there is by definition no demonstration effect or professionalization effect. Indeed, foreign firms have bribed to get an upper hand in the local market\footnote{http://www.nytimes.com/2012/04/22/business/at-wal-mart-in-mexico-a-bribe-inquiry-silenced.html?pagewanted=all} or to pursue rent in protected industries \citep{Malesky2015}. In these cases, foreign firms and government officials enter a collusive relationship, resulting in the maltreatment and stunted development of domestic firms.
 
 \begin{quote}
-Hypothesis: FDI in corruption countries stunt the development of the domestic private sectors
+Hypothesis: The presence of highly concentrated FDI in corrupt countries stunt the development of the domestic firms in those countries.
 \end{quote}
 
 \begin{quote}
-Hypothesis: FDI in corrupt sectors stunt the development of the domestic private sectors
+Hypothesis: The presence of highly concentrated FDI in corrupt sectors stunt the development of the domestic firms in those sectors.
 \end{quote}
 
-\subsection{Bureaucrats and corruption}
+\subsection{Government officials and corruption}
+
+To explain the puzzle why not all countries develop its domestic absorptive capacity ultimately comes down to answering why some governments want growth but not others, or why some are more corrupt than others. These are big yet difficult questions to study due to an insurmountable degree of endogeneity. Focusing on sub-national variation, we can hold many complex political variables constant (e.g. the opportunity to seek rents, the consequence of engaging in corruption), which are often observable but hard to quantify accounted for in quantitative analysis, and really delve closer to the calculus of government officials. Therefore, the theory on when government officials engage in corruption with foreign firms will be developed under the context of Vietnam.
+
+I argue that, regarding the use of FDI and private sector development, there is a principal-agent problem between the central and the provincial government, i.e. the two actors have diverging utility function. Since most of FDI projects are approved at the provincial level, the implementation heavily depends on the provincial government, e.g. investment license, access to land, implementation of central law. This is especially true because the law implementation varies widely across sub-national units in Vietnam (as well as in other developing countries) \citep{Meyer2005, Thun2006}. The central government, therefore, are more removed from direct contact with FDI firms and less likely to benefit from corruption than provincial leaders. At the same time, the central government is much more concerned with the overall economic growth, which is central to the longevity of the regime \citep{Malesky2008}. THIS MEANS A STRONG DOMESTIC SECTOR as discussed above. On the other hand, each provincial leader is incentivized to free-ride on the developmental effort of other provinces and of the central to keep the entire regime stable. Therefore, what features more heavily in the utility calculation is private rents for the provincial leaders, and the private sector development for the central leaders.
+
+Fortunately for the central government, the principal-agent problem in this context is partially solved because monitoring is not too difficult. The central government can observe the economic performance of the provinces and use personnel management to punish and reward provincial officials \citep{Sheng2007}. Indeed, this is evident in China, where provincial leaders of high-performing provinces are rewarded with promotion \citep{Li2005}.\footnote{\citet{Shih2012} recently argues that economic performance does not matter to cadre promotion. However, they investigate all members of China Central Committee, including the central party apparatus, the army, and the central economic bureaucracy. These actors are not the decision-makers in our theory, i.e. provincial officials, which were studied in \citep{Li2005}.} Therefore, the principal-agent problem is only severe when the provincial officials are not interested in further promotion to the central government. This suggests that there will be a variation in private sector development across provinces according to the interest in promotion of the provincial officials. By looking at the variation in the interest of sub-national actors, my theory contributes a fresh angle to the current literature on the relationship between decentralization and corruption, which has only postulated a one-way relationship: either decentralization increases bribery \citep{Fan2009} or reduces it \citep{Guerra2009}.
+
+Two key assumptions in the theory above deserves further examination:
+\begin{enumerate}
+\item Why wouldn't Vietnam's central government worry that a developed private sector may lead to social change that undermines its position?
+
+First, there is a large scholarship showing that authoritarian regimes are very adept at using institutions to manage regime outsiders in general and business in particular \citep{Gandhi2006, Gandhi2008, Wright2008, Le2015}. Second, if the legitimacy of the regime rests heavily on delivering economic growth, then the short-term risk of an economic downturn creating instability features much more prominently than the long-term concern with social changes. Third, it is possible to foster economic growth while restricting political freedom (e.g. Singapore)--indeed, growth can make a regime, both democratic and authoritarian, more stable, and creates room for political control \citep{Przeworski1997}.
+
+\item Why don't provincial leaders seek rent from the domestic sector? 
+
+First, Vietnam's private sector is still very small. It is much harder for the officials to co-ordinate and maintain secrecy when engaging in corruption with multiple domestic SMEs than with one big foreign firm. Second, growing the domestic sector big enough to seek rent is difficult. Moreover, given the rotation of officials in Vietnam, an official has few incentives to cultivate a private sector only to be rotated before reaping the benefit. Third, ironically, if officials want to grow the private sector for future rent-seeking, they must promote a enabling business environment that are free from rent-seeking. In contrast, corruption with FDI firms is much more convenient. Essentially, Vietnam's provincial officials have shifted the cost of building a thriving domestic sectors to the home countries of FDI firms and now extract rents from the high productivity and high profitability of these firms. 
+
+\end{enumerate}
 
 
-
-- local central literature (China)
-
-Political decentralization increases bribery \citep{Fan2009}. Uncoordinated corruption, more tiers of governments, increase corruption.
-
-Fiscal decentralization reduces corruption \citep{Guerra2009}
+In sum, I propose a hypothesis about variation across Vietnam's provinces:
 
 \begin{quote}
 Hypothesis: FDI in provinces where provincial leaders are more interested in rent than promotion will stunt the development of the domestic private sector
 \end{quote}
 
-\section{Hypothesis: Rent seeking}
-
 \section{Research design}
 
-Hypothesis: In sectors / countries where there is a lot of corruption between the politicians and FDI, there will be less private sector development (i.e. more time dealt with government, worse access to land, etc.) However, this could just be a measure of corruption overall! Then we look at the gap between FDI and domestic firms -- then we know that the outcome does not just reflect the overall quality of that sector.
+\subsection{Hierarchical model using crossnational, cross-sectoral data}
 
-- corruption between the politicians and FDI: 
+To measure corruption, FDI concentration, and treatment of firms across countries, I utilize the World Bank's Enterprise Survey (ES), which includes a wealth of firm-level data across 125 countries, spanning various topics from investment, labor, to business-government relation \citep{WorldBank2015}. The Enterprise Survey uses stratified random sampling (using three strata: firm size, business sector, and region) in order to ensure representativeness. The survey data comes from face-to-face interviews with upper management and is anonymized to ensure confidentiality at all times.\footnote{For more on the methodology of the Enterprise Survey, visit \url{http://www.enterprisesurveys.org/methodology}} This dataset has a wealth of firm-level data that helps us operationalize key concepts as detailed below.
 
-+ Vietnam case: 1) sectors with protection against FDI (group A) 
+Recall our hypothesis:
 
-+ Vietnam + crossnational: 2) sectors with natural monopoly / high degree of profitability. Natural monopoly / profitability = access is more valuable means more incentive to bribe, small numbers of firms means easier coordination. (But why wouldn't the bureaucrat want to collude with the domestic firms instead? Perhaps because there are no big enough domestic firms. We can control for this by pre-FDI private sector)
+\begin{quote}
+Hypothesis: The presence of highly concentrated FDI in corruption countries stunt the development of the domestic private sectors
+\end{quote}
 
+\begin{quote}
+Hypothesis: The presence of highly concentrated FDI in corrupt sectors stunt the development of the domestic private sectors
+\end{quote}
 
-- private sector development = measured on discretionary treatment measure (time deal with officials, officials' attitude, tax rate), not so much on infrastructure
+Operationalization:
+\begin{itemize}
+\item FDI in countries: available via UNCTAD data on FDI flows and stocks to countries
+\item FDI in sectors: available via the Enterprises Survey dataset. Concentration can be measured by constructing a Herfindahl-Hirschman Index based on the size of sale, labor, or capital of firms, available via the ES dataset
+\item Corruption: can be measured in two ways. 1) Firms' perception about corruption as an obstacle. This measure is frequently used but the least accurate since firms' perception of corruption depends not only on the level of corruption but also the characteristics of firms. 2) Hard measure of prevalence and depth of bribes, e.g. ``Was an informal payment expected or request (when applying for a license)?'', ``How much do establishments like this one give in informal payments?''  
 
-\subsection{Crossnational}
+\item The development of the domestic private sector: can be measured by 1) experience of domestic firms with the investment climate. However, this has the risk that this is the result of an overall bad investment climate (captured by the corruption experienced by foreigm firms). A better measure is 2) the gap between the experience of domestic and foreign firms, i.e. the maltreatment of domestic firms compared to foreign firms. This measure is biased against our hypothesis, since foreign firms that self-select into investing are more similar to domestic firms than other foreign firms that decide not to invest.
+\end{itemize}
 
-Countries with a lot of corruption + a lot of FDI will see larger gap between the treatment of FDI and domestic firms.
+\subsection{Cross-sectoral and sub-national Vietnam}
 
-Corruption alone is not enough. FDI alone is not enough.
+Despite the wealth of firm-level, cross-national data in the ES dataset, its measure of corruption is still plagued by a host of measurement issues. First, asking directly about firms' experience with corruption is difficult to get an accurate answer due to sensitivity bias \citep{Coutts2011}. Researchers, including the ES team, often address this problem by framing the question about the experience with corruption of ``firms like yours.'' However, with this technique, firms may not ``read between the lines'' and actually answer about the experience of others \citep{Ahart2004}.
 
-What about corruption reducing FDI? Is there a sample of countries with high FDI and high corruption? (a graph would be neat)
+I can remedy these problems with a research design focusing on the case of Vietnam, taking advantage by a survey list experiment by \citet{Malesky2015}, which uses unmatched count technique to accurately measure the experience of firms with corruption while avoiding sensitivity bias.
 
-INSERT GRAPH HERE
+Then, using data from the Provincial Competitiveness Index, a firm survey that is quite similar to the World Bank Enterprise Survey, I will be able to operationalize the other variables as above.
 
-
-\subsection{Provincial leader vs central}
-
-\citep{Malesky2008} Straight ahead on red -- central incentive is growth
-
-\citep{Sheng2007} China's central government exert more control over provinces that has high FDI (through party organization channel)
-
-Proxy provincial leader's need to promotion with age?
-
-\subsection{Sectoral}
-
-\citep{Malesky2015} discusses how foreign firms in Group A restricted industries have to pay more bribes (telecommunications, radio and TV broadcasting, transportation, and distribution). We can use this as a measure of FDI corruption, especially since some of the restrictions applies to foreign firms only.
-
+In addition to cross-sectoral variation, I can also get at the variation across provinces as discussed in theory section. To operationalize the interest of provincial leaders in promotion, I will use years until retirement (the mandated retirement age is 60 for male, 55 for female).
 
 \subsection{Conjoint analysis}
 
+While a crucial causal mechanism is the preference of the provincial leader, observational data can only partially get at this because what the leaders want sometimes may not be fulfilled due to external factors (endowment, central policies) which can be controlled to some extent, but still open to mis-modeling, unobserved factors. Furthermore, what does an official want from a FDI firm is often hard to completely teased out. A big FDI firm is an attractive source of rent, but it also brings job and technology. Indeed, perhaps because of this high correlation that it is so easy for officials to extract rent from FDI under the guise of economic development.
 
-
-- Selection bias (if a countries disriminated against FDI, then the surveyed firms are already more capable)
-
-
-% http://zunia.org/sites/default/files/media/node-files/04/155466_04050041.pdf
-
-Foreign firms often face fewer obstacles
-
-Asia crowding in (SK, Thailand, pakistan), Latin America crowd out (crowdin or crowdout). Paper does not discuss the policy nor the motivation
-
-Colombia, Mexico, Hong Kong, Indonesia, and Taiwan
-
-Argentina, Brazil,Colombia, Korea, Malaysia, Thailand in Asia
-
-Evidence is mixed across regions / countries DOES FOREIGN DIRECT INVESTMENT PROMOTE ECONOMIC GROWTH? EVIDENCE FROM EAST ASIA AND LATIN AMERICA 
-
-in Latin America, high corruption = high FDI http://www.ccsenet.org/journal/index.php/jms/article/viewFile/32108/18686
-
-http://www.nytimes.com/2012/04/22/business/at-wal-mart-in-mexico-a-bribe-inquiry-silenced.html?pagewanted=all (Walmart bribe in Mexico)
-
-\subsection{Alternative hypothesis}
-
-Fertility rate to control for the job hypothesis
+To truly get at the preference of provincial leader, I hope to do a survey experiment using conjoint analysis to ask provincial officials about their preference about a hypothetical FDI firms \citep{Hainmueller2014}. Then characteristics of this firm will be randomly varied across three dimensions: 1) jobs, 2) technology, and 3) land. This allows us to truly back-out the what provincial officials truly want from FDI by measuring their willingness to give up something for gaining something else.
 
 \clearpage
 \bibliographystyle{chicago}
