some writing. add provincial data

--- a/writeup/proposal.tex
+++ b/writeup/proposal.tex
@@ -115,19 +115,19 @@ In this section, I present some evidences that motivate the puzzle.
 
 There are several channels through which spillover can happen, all of which require a strong domestic sector.
 \begin{itemize}
-	\item imitation:  domestic firms may reverse engineer a production or management technique \citep{Wang1992}. This requires 1) a small, surmountable technological gap \citep{Kokko1996}, and 2) backward between local and foreign firms \citep{Javorcik2004}. Therefore, it is necessary to have technologically competent local firms that are able to supply inputs to foreign firms.
+	\item imitation:  domestic firms may reverse engineer a production or management technique \citep{Wang1992}. This requires 1) a small, surmountable technological gap \citep{Kokko1996}, and 2) backward linkage between local and foreign firms \citep{Javorcik2004}. Therefore, it is necessary to have technologically competent local firms that are able to supply inputs to foreign firms.
 	\item skills acquisition: workers trained in foreign firms bring along their human capital when they move to domestic firms \citep{Djankov2000}. This presumes a healthy domestic sector that can offer competitive wages to workers. 
 	\item competition: similar to arm's length trade, the presence of foreign firms put pressure on domestic firms to reduce inefficiency \citep{Glass2002}. For this mechanism to work, the domestic sector must survive instead of being squeezed out of market by foreign firms.
 	\item export demonstration: foreign firms are more knowledgeable about exporting, which involves high fixed cost to set up a distribution and transport infrastructure, or learning about foreign taste and regulatory environment. Domestic firms can learn this ``export know-how'' from foreign firms \citep{Aitken1997}. This process, too, requires a strong domestic sector that is able to engage in commercial linkages with foreign firms.
 \end{itemize}
 
-In sum, the spillover effect of FDI depends on a strong domestic sector. Therefore, if a government is truly interested in FDI for its spillover and growth-enhancing effect, the government must be equally interested, if not more, in nurturing the absorptive capacity of domestic firms. Holding constant firm characteristics (size, sector, technological capacity, etc.), if we find that domestic firms receive worse treatment by the government, suffer from worse labor quality, or export less, this can be evidence that the government is not primarily interested in the spillover effect of FDI.
+In sum, the spillover effect of FDI depends on a strong domestic sector. Therefore, if a government is truly interested in FDI for its spillover and growth-enhancing effect, the government must be equally interested, if not more, in nurturing the absorptive capacity of domestic firms. Holding constant firm characteristics (size, sector, technological capacity, etc.), if we find that domestic firms receive worse treatment by the government, this can be evidence that the government is not primarily interested in the spillover effect of FDI.
 
 \subsection{FDI and corruption}
 
-My hypothesis that host country officials engage in corruption with foreign firms to the detriment of domestic firm is a novel contribution to the IPE literature of FDI and corruption. So far, the literature has been predominantly dominated by studies showing that a high level of corruption deters FDI \citep{Wei2000, Hakkala2008, Al-Sadig2009}. But what about firms that choose to invest in a highly corrupt environment nonetheless? One strain of the literature argues that foreign firms can help reduce corruption in host country via regulatory pressure effect, demonstration effect, professionalization effect \citep{Kwok2006}; or via competing away the rents of the domestic firms, reducing the supply of bribes \citep{Sandholtz2003}. On the other hand, some argue that foreign firms, disadvantaged by their foreignness, have to bribe more and exacerbate corruption \citep{Hellman2002}.
+My hypothesis that host country officials engage in corruption with foreign firms to the detriment of domestic firm is a novel contribution to the IPE literature of FDI and corruption. So far, the literature has been predominantly dominated by studies showing that a high level of corruption deters FDI \citep{Wei2000, Hakkala2008, Al-Sadig2009}. But what about firms that choose to invest in a highly corrupt environment nonetheless? One strain of the literature argues that foreign firms can help reduce corruption in host country via regulatory pressure effect, demonstration effect, and professionalization effect \citep{Kwok2006}; or via competing away the rents of the domestic firms, reducing the supply of bribes \citep{Sandholtz2003}. On the other hand, some argue that foreign firms, disadvantaged by their foreignness, have to bribe more and exacerbate corruption \citep{Hellman2002}.
 
-My theory advances the literature by thinking about the behaviors of different types of foreign firms. Not all foreign firms are underdog, forced to bribe to equalize the playing field. If foreign firms enjoy regulatory privilege, they do not want to relinquish it. If foreign firms are in collusion with government, there is by definition no demonstration effect or professionalization effect. Indeed, foreign firms have bribed to get an upper hand in the local market\footnote{http://www.nytimes.com/2012/04/22/business/at-wal-mart-in-mexico-a-bribe-inquiry-silenced.html?pagewanted=all} or to pursue rent in protected industries \citep{Malesky2015}. In these cases, foreign firms and government officials enter a collusive relationship, resulting in the maltreatment and stunted development of domestic firms.
+My theory advances the literature by thinking about the behaviors of different types of foreign firms. Not all foreign firms are underdog, forced to bribe to equalize the playing field. If foreign firms enjoy regulatory privilege, they do not want to relinquish it. If foreign firms are themselves in collusion with the government, there is by definition no demonstration or professionalization effect. Indeed, foreign firms have bribed to get an upper hand in the local market\footnote{http://www.nytimes.com/2012/04/22/business/at-wal-mart-in-mexico-a-bribe-inquiry-silenced.html?pagewanted=all} or to pursue rent in protected industries \citep{Malesky2015}. In these cases, foreign firms and government officials enter a collusive relationship, resulting in the maltreatment and stunted development of domestic firms.
 
 \begin{quote}
 Hypothesis: High concentration of FDI in corrupt countries stunts the development of the domestic firms in those countries.
@@ -139,7 +139,7 @@ Hypothesis: High concentration of FDI in corrupt sectors stunt the development o
 
 \subsection{Government officials and corruption}
 
-To explain the puzzle why not all countries develop its absorptive capacity ultimately comes down to answering why some governments want growth but not others, or why some are more corrupt than others. These are big yet difficult questions to study with a cross-national design due to an insurmountable degree of endogeneity. Focusing on sub-national variation, we can hold many complex political variables constant (e.g. the opportunity to seek rents, the consequence of engaging in corruption), which are often observable but hard to quantify and accounted for in quantitative analysis. Furthermore, staying within one political system, we and really delve closer to the calculus of government officials. Therefore, I develop the theory on when government officials engage in corruption with foreign firms under the context of Vietnam.
+To explain the puzzle why not all countries develop its absorptive capacity ultimately comes down to answering why some governments want growth but not others. These are big and difficult questions to study with a cross-national design due to an insurmountable degree of endogeneity. Focusing on sub-national variation, we can hold many complex political variables constant (e.g. the opportunity to seek rents, the consequence of engaging in corruption), which are often observable but hard to quantify and accounted for in quantitative analysis. Furthermore, staying within one political system, we can really delve closer to the calculus of government officials. Therefore, I develop the theory of when government officials engage in corruption with foreign firms under the context of Vietnam.
 
 I argue that, regarding the use of FDI for rent versus for spillover, there is a principal-agent problem between the central and the provincial government. Since most FDI projects are approved at the provincial level, it is the provincial governments, not the central, that hold valuable services for sale to foreign firms. This is especially true because the implementation of law varies widely across sub-national units in Vietnam (a situation common among developing countries) \citep{Meyer2005, Thun2006}. The central government, therefore, is more removed from direct contact with FDI firms and less likely to benefit from corruption than provincial leaders. At the same time, the central government is much more concerned with overall economic growth, which is central to the longevity of the regime \citep{Malesky2008}. Therefore, the central government is more interested in the spillover effect of FDI, which necessitates the development of a strong domestic sector as discussed.  On the other hand, each provincial leader is incentivized to free-ride on the developmental effort of other provinces and of the central to keep the entire regime stable. Therefore, for provincial leaders, private rents from FDI features more heavily in the utility calculation. In contrast, central leaders care more about private sector development.
 
@@ -195,15 +195,37 @@ Despite the wealth of firm-level, cross-national data in the ES dataset, its mea
 
 I can remedy these problems with a research design focusing on the case of Vietnam, taking advantage by a survey list experiment by \citet{Malesky2015}, which uses unmatched count technique to accurately measure the experience of firms with corruption while avoiding sensitivity bias.
 
-Then, using data from the Provincial Competitiveness Index, a firm survey that is quite similar to the World Bank Enterprise Survey, I will be able to operationalize the other variables as above.
-
-In addition to cross-sectoral variation, I can also get at the variation across provinces as discussed in theory section. To operationalize the interest of provincial leaders in promotion, I will use years until retirement (the mandated retirement age is 60 for male, 55 for female).
+Operationalization:
+\begin{itemize}
+\item FDI in province: Provincial statistics of FDI flow
+\item FDI in sectors: PCI-FDI survey (can the survey sample be used to estimate the population's FDI?)
+\item Corruption: list experiment \citep{Malesky2015}
+\item Interest in promotion: 
+\begin{itemize}
+	\item years until retirement (retirement age is 60 for male, 55 for female)
+	\item appearance in centrally controlled newspapers
+\end{itemize}
+\item The development of the domestic private sector:
+\begin{itemize}
+	\item PCI survey question: ``Do you think that the provincial officials prefer FDI?'' (Question H3)
+	\item The gap in the experience of domestic and foreign firms regarding the pro-activeness of the government in helping business (Form H for domestic firms and Form J for foreign firms)
+\end{itemize}
+\end{itemize}
 
 \subsection{Conjoint analysis}
 
 While the crucial causal mechanism is the preference of provincial officials, observational data can only partially get at this because what the leaders want sometimes may not be fulfilled due to external factors (endowment, central policies). These factors can be controlled to some extent, yet the risk of mis-modeling is always present. Furthermore, what an official wants from a FDI firm is often hard to completely teased out. A big FDI firm is an attractive source of rent, but it also brings job and technology. Indeed, perhaps this high correlation is why it is so easy for officials to extract rent from FDI under the guise of promoting economic development.
 
-To truly get at the preference of provincial leader, I plan to conduct a survey experiment using conjoint analysis to ask provincial officials about their preference between two hypothetical FDI firms \citep{Hainmueller2014}. The characteristics of these will be randomly varied across three dimensions: 1) jobs, 2) technology, and 3) land, which proxies for corruption opportunities, since this is a key resource to firm that is controlled by provincial officials. This allows us to truly back-out the what provincial officials truly want from FDI by measuring their willingness to give up something for gaining something else.
+To truly get at the preference of provincial leader, I plan to conduct a survey experiment using conjoint analysis to ask provincial officials about their preference between two hypothetical FDI firms \citep{Hainmueller2014}. The characteristics of these will be randomly varied across five dimensions: 1) industry, 2) size of labor force, 3) capital, 4) technology age, and 5) land, which proxies for corruption opportunities, since this is a key resource to firm that is controlled by provincial officials. If desired, it is possible to:
+\begin{itemize}
+\item adjust the design so that implausible hypotheticals will not appear (i.e. there should not be a high-tech company with very small capital).
+\item randomize the ordering of the characteristics between respondents to test for the ordering effect (i.e. knowing a firm's industry first changes how the respondent thinks about the other characteristics)
+\end{itemize}
+
+I am mainly interested in the ``average marginal component effect'' (AMCE) of \textit{land}, which is the marginal effect of \textit{land} on the likelihood of a project being accepted, averaged over the distribution of all the other components. This allows us to back-out the what provincial officials truly want from FDI project.
+
+\subsubsection{Experimental design}
+\input{conjoint_experiment}
 
 \clearpage
 \bibliographystyle{chicago}
